--- a/index.html
+++ b/index.html
@@ -15,6 +15,121 @@
 
 <body>
 
+
+  <!--------------- slider ---------------->
+
+  <section class="slider-section ">
+
+    <div class="hero-slider slider">
+      <div class="slide position-relative"><img src="content/image/home-slide-1.jpg">
+
+
+
+
+      </div>
+      <div class="slide position-relative"><img src="content/image/home-slide-2.jpg">
+
+
+      </div>
+      <div class="slide position-relative"><img src="content/image/home-slide-3.jpg">
+
+
+
+
+
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+ 
+
+  <section class="section4 ptb-70">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-sm-6 col-md-3 ">
+          <div class="card-box text-center">
+            <i class="	fas fa-pepper-hot"></i>
+              <h5 class="position-relative">Fast Delivery</h5>
+              <hr class="orange-line">
+            <p>Everything you order at QuickFood will be quickly delivered to your door.</p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 ">
+          <div class="card-box text-center">
+            <i class="	fas fa-ice-cream"></i>
+              <h5 class="position-relative">FRESH FOOD</h5>
+              <hr class="orange-line">
+            <p>We use only the best ingredients to cook the tasty fresh food for you.</p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 ">
+          <div class="card-box text-center">
+            <i class="fas fa-pizza-slice"></i>
+              <h5 class="position-relative">EXPERIENCED CHEFS
+              </h5>
+              <hr class="orange-line">
+            <p>Our staff consists of chefs and cooks with years of experience.</p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 ">
+          <div class="card-box text-center">
+            <i class="	fas fa-hamburger"></i>
+              <h5 class="position-relative">A VARIETY OF DISHES</h5>
+              <hr class="orange-line">
+            <p>In our menu you’ll find a wide variety of dishes, desserts, and drinks.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section5 pt-4 ">
+    <div class="container-fluid m-0 p-0">
+    <div class="row ">
+      <div class="col-xs-6 col-md-3 p-0">
+
+        <a class="gallery-img" href="#"><img src="content/image/index-gallery-1.jpg" alt="">
+
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3 p-0">
+
+        <a class="gallery-img" href="#"><img src="content/image/index-gallery-2.jpg" alt="">
+
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3 p-0">
+
+        <a class="gallery-img" href="#"><img src="content/image/index-gallery-3.jpg" alt="">
+
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3 p-0">
+
+        <a class="gallery-img" href="#"><img src="content/image/index-gallery-4.jpg" alt="">
+
+        </a>
+      </div>
+    </div>
+  </div>
+  </section>
+  <section>
+
+    <div class="map-section">
+
+      <iframe  frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+        src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+
+      </iframe>
+
+    </div>
+
+  </section>
+
   <!------------------------------ totop btn ----------------------------->
 
   <div id="toTop" class="back-to-top d-block"><i class="fas fa-chevron-up"></i></div>
